[tool.poetry]
name = "chatbase-track"
version = "0.1.0"
description = ""
authors = ["Alex Root Junior <jroot.junior@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.4"
httpx = {version = "^0.11.1", optional = true}
aiohttp = {version = "^3.6.2", optional = true}
requests = {version = "^2.22.0", optional = true}
aiogram = {version = "^2.6.1", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
httpx = "^0.11.1"
aiohttp = "^3.6.2"
requests = "^2.22.0"
ipython = "^7.12.0"
aiogram = "^2.6.1"

[tool.poetry.extras]
aiohttp = ["aiohttp"]
httpx = ["httpx"]
requests = ["requests"]
aiogram = ["aiogram"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
